# video_cloning

./: .gitignore  24fps.py  Dockerfile  LICENSE  README.md  docker-compose.yml  download_f5_tts_weights.py  download_wav2lip.py  knowledge_base.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/api/endpoints/: video.py
app/api/v1/endpoints/: clone.py
app/core/: celery_app.py  config.py  database.py
app/models/: __init__.py  job.py  video_task.py
app/schemas/: video_task.py
app/services/: f5_tts_engine.py  tasks.py
app/worker/: tasks.py
