[project]
name="video-clone-backend"
version="0.1.0"
description = "cpu-optimized video cloning api"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic-settings>=2.2.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "mlflow>=2.10.0",
    "onnxruntime>=1.17.0",
    "soundfile>=0.12.0",
    "dagshub",
    "huggingface-hub",
    "python-multipart",
    "opencv-python-headless",
    "numpy<2.0.0",
    "imageio",
    "imageio-ffmpeg",
    "librosa==0.9.2",
    "scipy",
    "pyyaml",
    "insightface==0.7.3"
]


# [tool.uv]
# extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[project.optional-dependencies]
ml = ["torch==2.2.0+cpu", "torchaudio==2.2.0+cpu", "torchvision==0.17.0+cpu"]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true


[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }